--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --respawn  src/index.ts",
-    "build": "",
-    "start": ""
+    "dev": "tsnd  -r tsconfig-paths/register --respawn  src/index.ts",
+    "build": "tsc -p .",
+    "start": "node ./dist/index.js"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +36,11 @@
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "http-status": "^1.7.3",
+    "module-alias": "^2.2.3",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.1",
+    "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.19",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   }
