--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsnd  -r tsconfig-paths/register --respawn  src/index.ts",
     "build": "tsc -p .",
-    "start": "node ./dist/index.js"
+    "start": "node -r module-alias/register ./dist/index.js"
   },
   "_moduleAliases": {
     "@": "dist"
