--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "http-status": "^1.7.3",
     "module-alias": "^2.2.3",
